--- a/termos.html
+++ b/termos.html
@@ -28,7 +28,8 @@
       </a>
 
       <nav aria-label="primaria">
-        <ul class="header-menu font-1-m cor-0">
+        <button data-menu="button" aria-expanded="false" aria-controls="menu" class="menu"><span>Menu</span></button>
+        <ul data-menu="lista" id="menu" class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -69,7 +70,9 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <a href="./index.html">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
+      </a>
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
