corrections in links externos of footer

--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-redes">
-          <a href="./">
+          <a href="https://instagram.com">
             <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
-          <a href="./">
+          <a href="https://facebook.com">
             <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
-          <a href="./">
+          <a href="https://youtube.com">
             <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
