--- a/bicicletas.html
+++ b/bicicletas.html
@@ -157,14 +157,14 @@
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-redes">
-          <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+          <a href="https://instagram.com">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
-          <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+          <a href="https://facebook.com">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
-          <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+          <a href="https://youtube.com">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
