--- a/termos.html
+++ b/termos.html
@@ -82,29 +82,30 @@
           <li>Rio de Janeiro - RJ</li>
         </ul>
         <div class="footer-redes">
-          <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+          <a href="https://instagram.com">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
-          <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+          <a href="https://facebook.com">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
-          <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+          <a href="https://youtube.com">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
-      <div class="footer-informacoes">
-        <h3 class="font-2-l-b cor-0">Informações</h3>
-        <nav>
-          <ul class="font-1-m cor-5">
-            <li><a href="./bicicletas.html">Bicicletas</a></li>
-            <li><a href="./seguros.html">Seguros</a></li>
-            <li><a href="./contato.html">Contato</a></li>
-            <li><a href="./termos.html">Termos e Condições</a></li>
-          </ul>
-        </nav>
-      </div>
-      <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+    <div class="footer-informacoes">
+      <h3 class="font-2-l-b cor-0">Informações</h3>
+      <nav>
+        <ul class="font-1-m cor-5">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./termos.html">Termos e Condições</a></li>
+        </ul>
+      </nav>
+    </div>
+    <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
   <script src="./js/script.js"></script>
